/*
 * $Id: ChangeLog,v 1.190 2002/05/01 04:49:32 horacioroldan Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-05-01 11:57 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * tests/pp_harb.ch
    ! Many improvements in OLE inteface. It now supports parameters by reference.

2002-05-01 01:41 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * include/hbrddcdx.h
   * source/rdd/dbfcdx/dbfcdx1.c
   * source/rdd/dbfcdx/dbfcdx1.h
   * source/rdd/dbfcdx/dbfcdx2.h
     + multiple CDXs support for:
       hb_cdxOrderListAdd, hb_cdxOrderListFocus, hb_cdxGoCold,
       hb_cdxGoHot, hb_cdxGetTagByNumber, hb_cdxGetActiveTag,
       DBOI_ORDERCOUNT, DBOI_UNIQUE, ordName, ordBagName.
     ! fixed a bug in: gotop, gobbotom, skip
     + begin of hb_cdxZap
     + added support for: DBOI_ISCOND, DBOI_ISDESC, DBOI_FILEHANDLE
     + added index locking routines
     ! fixed some structures definitions for gcc/vc/...
     ! fixed autopen bug on Linux
     ! fixed recno() while indexing
     ! fixed sharing flags in index creation
     ! fixed tag order after index creation
     + added function hb_cdxReorderTagList
     + added dummies handlers for DBOI_KEYADD, DBOI_KEYDELETE.

2002-04-29 23:08 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    + Added ->pOrigin fix in hb_vmPushLocal() and hb_vmPushStatic()

2002-04:30 01:41 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/memoedit.prg
    ! Fix minor bug related with support for Set Key defined Keys
  * source/rtl/getlist.prg
    ! Fix bug when release last getlist
      Reported by Alexander Kresin

2002-04-29 19:25 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/teditor.prg
    * Minor fix

2002-04-29 16:20 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/set.c
    ! Replaced calls to stricmp with hb_stricmp
