@@ -1,6 +1,6 @@
 %{
 /*
- * $Id: harbour.sly,v 1.9 2002/04/21 01:39:17 ronpinkas Exp $
+ * $Id: harbour.sly,v 1.10 2002/04/22 23:09:58 ronpinkas Exp $
  */
 
 /*
@@ -462,28 +462,34 @@ NumAlias   : NUM_INTEGER ALIASOP      { $$ = hb_compExprNewLong( $1.iNumber ); }
 
 /* NIL value
  */
-NilValue   : NIL                       { $$ = hb_compExprNewNil(); }
+NilValue   : NIL                      { $$ = hb_compExprNewNil(); }
 ;
 
-NilAlias   : NilValue ALIASOP          { $$ = $1; }
+NilAlias   : NilValue ALIASOP         { $$ = $1; }
 ;
 
 /* Literal string value
  */
-LiteralValue : LITERAL                    { $$ = hb_compExprNewString( $1 );
-					    if( bTrancuateBaseArray && pBaseArrayName == NULL )
-                                            { char *pCopy = hb_strdup( $1 ), *pTmp = strchr( pCopy, '[' );
-                                              if( pTmp )
-					      {
-						 pCopy[ pTmp - pCopy ] = '\0';
-                                                 pBaseArrayName = hb_compExprNewString( pCopy );
-					      }
-					      bTrancuateBaseArray = FALSE;
-;                                           }
-					  }
+LiteralValue : LITERAL                {
+                                         $$ = hb_compExprNewString( $1 );
+
+                                         if( bTrancuateBaseArray && pBaseArrayName == NULL )
+                                         {
+                                            char *pCopy = hb_strdup( $1 ), *pTmp = strchr( pCopy, '[' );
+
+                                            if( pTmp )
+                                            {
+                                               pCopy[ pTmp - pCopy ] = '\0';
+                                               pBaseArrayName = hb_compExprNewString( pCopy );
+                                            }
+
+                                            bTrancuateBaseArray = FALSE;
+                                         }
+                                      }
+             ;
 
 LiteralAlias : LiteralValue ALIASOP       { $$ = $1; }
-;
+             ;
 
 /* Codeblock value
  */
@@ -815,15 +821,17 @@ ObjectData  : NumValue ':' SendId        { $$ = hb_compExprNewSend( $1, $3 ); }
             ;
 
 WithData    : ':' SendId                 {
-                                           if( hb_comp_wWithObjCounter == 0 )
-                                           {
-                                              hb_compGenError( hb_comp_szErrors, 'E', HB_COMP_ERR_UNMATCHED_WITHOBJECT, $2, NULL );
-                                           }
-                                           $$ = hb_compExprNewWithSend( $2 );
-                                         }
+                                            if( hb_comp_wWithObjCounter == 0 )
+                                            {
+                                               hb_compGenError( hb_comp_szErrors, 'E', HB_COMP_ERR_UNMATCHED_WITHOBJECT, $2, NULL );
+                                            }
 
-ObjectDataAlias : ObjectData ALIASOP         { $$ = $1; }
-;
+                                            $$ = hb_compExprNewWithSend( $2 );
+                                         }
+           ;
+
+ObjectDataAlias : ObjectData ALIASOP     { $$ = $1; }
+                ;
 
 /* Object's method
  */
@@ -1976,6 +1984,7 @@ ForEach    : FOREACH LValue  /* 1  2 */
 WithObject   : WITHOBJ Expression { hb_compGenWithObject($2); } Crlf
                  EmptyStats
                END                { hb_compGenEndWithObject(); }
+             ;
 
 BeginSeq   : BEGINSEQ { ++hb_comp_wSeqCounter; $<lNumber>$ = hb_compSequenceBegin(); } Crlf
                 EmptyStats
@@ -1983,8 +1992,8 @@ BeginSeq   : BEGINSEQ { ++hb_comp_wSeqCounter; $<lNumber>$ = hb_compSequenceBegi
                   /* Set jump address for HB_P_SEQBEGIN opcode - this address
                    * will be used in BREAK code if there is no RECOVER clause
                    */
-                  hb_compGenJumpHere( $<lNumber>2 );
-                  $<lNumber>$ = hb_compSequenceEnd();
+                   hb_compGenJumpHere( $<lNumber>2 );
+                   $<lNumber>$ = hb_compSequenceEnd();
                 }
                 RecoverSeq
                 {
@@ -1992,7 +2001,9 @@ BeginSeq   : BEGINSEQ { ++hb_comp_wSeqCounter; $<lNumber>$ = hb_compSequenceBegi
                     * HB_P_SEQBEGIN opcode if there is RECOVER clause
                     */
                    if( $<lNumber>6 )
+                   {
                       hb_compGenJumpThere( $<lNumber>2, $<lNumber>6 );
+                   }
                 }
              END
              {
@@ -2001,8 +2012,13 @@ BeginSeq   : BEGINSEQ { ++hb_comp_wSeqCounter; $<lNumber>$ = hb_compSequenceBegi
                  * RECOVER clause is used
                  */
                 hb_compGenJumpThere( $<lNumber>5, hb_comp_functions.pLast->lPCodePos );
-                if( !$<lNumber>6 )   /* only if there is no RECOVER clause */
+
+                /* only if there is no RECOVER clause */
+                if( !$<lNumber>6 )
+                {
                    --hb_comp_wSeqCounter;  /* RECOVER is also considered as end of sequence */
+                }
+
                 hb_compSequenceFinish( $<lNumber>2, $<iNumber>4 );
                 hb_comp_functions.pLast->bFlags &= ~ FUN_WITH_RETURN;
              }
